Add webpack and change config approach

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -1,4 +1,10 @@
-body {
-  background-color: #fff;
-  color: #666;
-}
+// 1. Project specific settings, variables, mixins and functions
+
+
+// 2. General styles for base elements (body, a, p, h1...6 etc.)
+
+
+// 3. Tightly coupled styles for components
+
+
+// 4. Generic helper classes (usually small dirty hacks, keep this folder clean yo!)
